<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:padding="16dp"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/select_period" android:textSize="18sp"/>

    <Button android:id="@+id/btn_report_month" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/month"/>

    <Button android:id="@+id/btn_report_year" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/year"/>

    <Button android:id="@+id/btn_report_custom" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/custom_range"/>

</LinearLayout>
